--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script>
     window.$docsify = {
       // 项目名称
-      name: 'docsify-demo',
+      name: 'XBlog',
       // 仓库地址，点击右上角的Github章鱼猫头像会跳转到此地址
       repo: 'https://github.com/zjcscut/docsify-demo',
       // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
@@ -25,7 +25,9 @@
       // 最大支持渲染的标题层级
       maxLevel: 4,
       // 自定义侧边栏后默认不会再生成目录，设置生成目录的最大层级，建议配置为1或者2
-      subMaxLevel: 2
+      subMaxLevel: 2,
+      // set sidebar display level
+      sidebarDisplayLevel: 1
     }
   </script>
   <!-- <script>
@@ -44,8 +46,11 @@
 <!-- </script> -->
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <!-- 代码复制 -->
   <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
 
+  <!-- 目录折叠 -->
+  <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   <!-- docsify的js依赖 -->
   <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script> -->
   <!-- emoji表情支持 -->
