--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>XBlog</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">🏃‍🏃‍🏃‍💨 loading……</div>
   <script>
     window.$docsify = {
       // 项目名称
       name: 'XBlog',
+      nameLink: 'https://xiaolei565.github.io/xblog/',
       // 仓库地址，点击右上角的Github章鱼猫头像会跳转到此地址
       repo: 'https://github.com/xiaolei565/xblog',
       // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
@@ -27,23 +28,23 @@
       // 自定义侧边栏后默认不会再生成目录，设置生成目录的最大层级，建议配置为1或者2
       subMaxLevel: 2,
       // set sidebar display level
-      sidebarDisplayLevel: 1
+      sidebarDisplayLevel: 1,
+      search: {
+        paths: 'auto',
+        placeholder: '🔍 搜索',
+        noData: '😒 未找到结果',
+        // Headline depth, 1 - 6
+        depth: 6,
+        maxAge: 86400000, // 过期时间，单位毫秒，默认一天
+      },//增加搜索框
+      footer: {
+        copy: 'Copyright &copy; 2021 </span>',
+        auth: ' <strong>Glor</strong>',
+        pre: '<hr/>',
+        style: 'text-align: center;',
+      },
     }
   </script>
-  <!-- <script>
-    // 搜索配置
-    window.$docsify = {
-        search: {
-            maxAge: 86400000,
-            paths: auto,
-            placeholder: '搜索',
-            noData: '找不到结果',
-            depth: 4,
-            hideOtherSidebarContent: false,
-            namespace: 'docsify-demo',
-        }
-    } -->
-<!-- </script> -->
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <!-- 代码复制 -->
@@ -54,10 +55,12 @@
   <!-- docsify的js依赖 -->
   <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script> -->
   <!-- emoji表情支持 -->
-  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script> -->
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
   <!-- 图片放大缩小支持 -->
   <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script> -->
   <!-- 搜索功能支持 -->
-  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script> -->
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <!-- 网页页脚功能支持 -->
+  <script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
 </body>
 </html>
